--- a/app/src/wasmJsMain/resources/index.html
+++ b/app/src/wasmJsMain/resources/index.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matrix Calculator</title>
-    <style>
-        html, body {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-        }
-    </style>
+    <link type="text/css" rel="stylesheet" href="style.css">
+    <script type="application/javascript" src="removeSpinner.js"></script>
     <script type="application/javascript" src="composeApp.js"></script>
 </head>
 <body>
+    <div id="loader">
+        <div class="spinner"></div>
+    </div>
 </body>
 </html>
