--- a/app/src/wasmJsMain/resources/index.html
+++ b/app/src/wasmJsMain/resources/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matrix Calculator</title>
     <link type="text/css" rel="stylesheet" href="style.css">
-    <script type="application/javascript" src="composeApp.js"></script>
 </head>
 <body>
     <div id="loader">
         <div class="spinner"></div>
     </div>
+    <link rel="preload" href="skiko.wasm" as="fetch">
+    <link rel="preload" href="composeApp.wasm" as="fetch">
+    <script type="application/javascript" src="composeApp.js"></script>
 </body>
 </html>
