--- a/app/src/wasmJsMain/resources/index.html
+++ b/app/src/wasmJsMain/resources/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matrix Calculator</title>
     <link type="text/css" rel="stylesheet" href="style.css">
-    <link rel="preload" href="skiko.wasm" as="fetch">
-    <link rel="preload" href="composeApp.wasm" as="fetch">
+    <link rel="preload" href="skiko.wasm" as="fetch" type="application/wasm" crossorigin="anonymous">
+    <link rel="preload" href="composeApp.wasm" as="fetch" type="application/wasm" crossorigin="anonymous">
 </head>
 <body>
     <div id="loader">
