deploy: 14c4136126838b75a80311ce8af2fcae2841d0fc

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <div id="loader">
         <div class="spinner"></div>
     </div>
-    <script type="application/javascript" src="composeApp.js"></script>
+    <script type="application/javascript" src="https://dxx3q4hyoo2sq.cloudfront.net/composeApp.js"></script>
 </body>
 </html>
